--- a/README
+++ b/README
@@ -1,4 +1,18 @@
-This is your new Play application
-=====================================
+README's for the weak
 
-This file will be packaged with your application, when using `play dist`.
+License
+-------
+
+Copyright 2014 Zengularity
+
+Hackinder is free software: you can redistribute it and/or modify
+it under the terms of the AFFERO GNU General Public License as published by
+the Free Software Foundation.
+
+Hackinder is distributed "AS-IS" AND WITHOUT ANY WARRANTY OF ANY KIND,
+INCLUDING ANY IMPLIED WARRANTY OF MERCHANTABILITY,
+NON-INFRINGEMENT, OR FITNESS FOR A PARTICULAR PURPOSE. See
+the AFFERO GNU General Public License for the complete license terms.
+
+You should have received a copy of the AFFERO GNU General Public License
+along with Hackinder.  If not, see <http://www.gnu.org/licenses/agpl-3.0.html>
